--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -173,5 +173,14 @@
                     }
                 }
             }
+            #send {
+                flex-direction: column;
+                align-items: flex-end;
+                justify-content: space-between;
+                .send-btn {
+                    margin-left: 0;
+                    margin-top: 2rem;
+                }
+            }
         }
     }
